--- a/src/main/resources/templates/list-concert.html
+++ b/src/main/resources/templates/list-concert.html
@@ -17,7 +17,9 @@
             <span th:text="${concert.performer}"></span>
             <span th:text="${concert.date}"></span>
             <span th:text="${concert.description}"></span>
+           
         </li>
+        <li> <a th:href="@{/delete-concert}">Delete All</a></li>
     </ul>
     <!-- TODO: Add list of concerts -->
    
